--- a/front-end/src/app/forms/transactions/transactions.component.scss
+++ b/front-end/src/app/forms/transactions/transactions.component.scss
@@ -82,6 +82,7 @@
       display: block;
       margin: 0 auto;
       width: 96%;
+      padding: .75em 0 .25em 0;
       @include clearfix();
       .btn-options {
         color: $shuttleGray;
@@ -155,6 +156,14 @@
     margin: 1.5em 0;
   }
 
+  #btn-cancel {
+    background-color: grey;
+  }
+
+  .btn-modal-footer {
+    width: 6em;
+  }
+
 /* style ngx-pagination - start */
 /* override some styling where use of !important is made. */
 
@@ -164,13 +173,13 @@
 
   .ngx-pagination .current{
     padding: 0.1875rem 0.625rem;
-    background: #112E51 !important;;
+    background: #9B9B9B !important;;
     color: #fefefe;
     cursor: default;
   }
 
   .ngx-pagination a, .ngx-pagination button {
-    color: #112E51 !important;;
+    color: #9B9B9B !important;;
     display: block;
     padding: 0.1875rem 0.625rem;
     border-radius: 0;
