Fixing issue with formType not clearing when leaving form

--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -104,7 +104,7 @@
           </button>
         </div>
         <div class="sidebar__nav--links" [ngClass]="{'d-none': otherFormsHidden === true}">
-          <ul class="links-list" *ngFor="let committee_form of committee_forms; trackBy: trackCommittee || async" >
+          <ul class="links-list" *ngFor="let committee_form of committee_forms || async" >
             <li
               class="links-list__item"
               [attr.data-FormType]="committee_form.form_type_mini"
